# BitsButton

./: CMakeLists.txt  bits_button.c  build.ps1
.github/: copilot-instructions.md
docs/: accurate_state_machine_analysis.md  state_machine_diagram.md  state_machine_visualization.html  test_visualization.html
examples/: example_poll.c
test/: CMakeLists.txt
test/utils/: time_utils.c
